# mscraper

./: .gitignore  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  gradle.properties  metadata.json  my-upload-key.jks  settings.gradle.kts  uniffi.toml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt  MscraperApplication.kt
app/src/main/java/com/example/bridge/: MmDlpBridge.kt
app/src/main/java/com/example/core/: BackupSyncService.kt  DownloadManager.kt  DuplicateManager.kt  GeminiPlaylistGenerator.kt  LibraryScanner.kt  MmDlpApi.kt  MusicWidgetProvider.kt  PlaybackService.kt  ProgressManager.kt  SettingsManager.kt  SharingService.kt  SurrealDbService.kt  mm_dlp_core.kt
app/src/main/java/com/example/db/: AppDatabase.kt  FavoriteTrackDao.kt  SurrealDatabase.kt  TrackDao.kt
app/src/main/java/com/example/model/: DownloadJob.kt  FavoriteTrack.kt  PlaylistEntity.kt  PlaylistTrackEntity.kt  SearchSource.kt  Track.kt  TrackEntity.kt
app/src/main/java/com/example/navigation/: BottomNavigationBar.kt  NavGraph.kt
app/src/main/java/com/example/network/: MediaApiManager.kt  PipedApiService.kt
app/src/main/java/com/example/screens/: CoreDeckScreen.kt  (+5 more)
app/src/main/java/uniffi/mmdlp/: mmdlp.kt
app/src/main/res/layout/: widget_layout.xml
app/src/main/res/values/: font_certs.xml  strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  ExampleUnitTest.kt  GreetingScreenshotTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: lib.rs  scraper.rs
src/data/extractors/: mod.rs  soundcloud.rs  youtube.rs
src/domain/: models.rs
src/download/: manager.rs  mod.rs
src/ffi/: api.rs
src/media/: metadata_rescue.rs  mod.rs  tagger.rs
src/network/: quic_client.rs
(+54 files in other folders)
