[package]
name = "mscraper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.91"
bytes = "1.12.1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.2"
lofty = "0.24.0"
quinn = "0.11.11"
reqwest = { version = "0.13.4", features = ["json"] }
rustls = "0.23.42"
rustls-pki-types = "1.15.0"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uniffi = { version = "0.31.2", features = ["cli"] }
urlencoding = "2.1.3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "mm_dlp_core"

[dev-dependencies]
criterion = "0.8.2"
